wafer-space/Information/questions/inout-unsupported-error/2025-12/2025-12.txt
==============================================================
Guild: wafer.space Community
Channel: Information / questions / InOut unsupported error
After: 11/30/2025 23:59
Before: 01/01/2026 00:00
==============================================================

[12/15/2025 20:52] chvsnaveen12
Has anyone encountered this error before. My entire project is in Systemverilog.
6. Executing SLANG frontend.                                                                                                                                                                               
src/chip_core.sv:18:17: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire VDD,                                                                                                                                                                                       
                ^                                                                                                                                                                                          
src/chip_core.sv:19:17: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire VSS,                                                                                                                                                                                       
                ^                                                                                                                                                                                          
src/chip_core.sv:38:39: error: direction 'InOut' on inlined port connection unsupported                                                                                                                    
    inout  wire [NUM_ANALOG_PADS-1:0] analog  // Analog


[12/15/2025 21:00] mole99
If you use slang, did you also set: `SLANG_ARGUMENTS: ['--keep-hierarchy']`?

{Reactions}
👍 (2)

==============================================================
Exported 2 message(s)
==============================================================
